# myStockMarket

./: .env.example  .gitignore  APP-FEEL-PLAN.md  CLARITY-AND-CADENCE-PLAN.md  CLAUDE.md  DECISIONS.md  DEVELOPMENT-PLAN.md  GATE-EFFICIENCY-ANALYSIS.md  GATE-EFFICIENCY-PLAN.md  LEAN-CODEBASE-PLAN.md  LESSONS.md  NEWS-AND-CONTROL-PLAN.md  NEXT-SESSION-PROMPT.md  PATTERNS.md  POLISH-AND-DEPTH-PLAN.md  PROGRESS.md  QUESTIONS-FOR-BISHANT.md  README.md  UI-REDESIGN-PLAN.md
pipeline/: analytics.py  backup.py  baserates.py  catalyst_allowlist.py  catalyst_ingest.py  catalysts.py  config.py  detectors.py  indicators.py  janitor.py  macro_levels.py  macro_stats.py  monitoring.py  mood.py  nightly.py  parquet_store.py  publish.py  pyproject.toml  pytest.ini  resolve.py  scans.py  storage.py  trading_calendar.py  universe.py  volbands.py
pipeline/adapters/: alpaca.py  base.py  edgar.py  erapi.py  finnhub.py  fmp.py  fred.py  goldapi.py  marketaux.py  nrb.py
pipeline/briefing/: __init__.py  depth.py  evening.py  extract.py  lexicon.py  schema.py  stats.py  synthesize.py  verify.py
pipeline/jobs/: job_a.py  job_b.py
pipeline/newsdesk/: cluster.py  images.py  ingest.py  narrate.py  noise.py  ogimage.py  outlets.py  rank.py  resolve.py  taxonomy.py
pipeline/scripts/: comment_prover.py  comment_stats.py  healthchecks_drill.py  probe_providers.py  record_alpaca.py  record_edgar.py  record_erapi.py  record_finnhub.py  record_fmp.py  record_fred.py  record_fred_calendar.py  record_goldapi.py  record_marketaux.py  record_news.py  record_nrb.py
pipeline/tests/: conftest.py  (+60 more)
(+528 files in other folders)
